--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=root
 
 # Hibernate properties
 spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 # MVC properties for methods PATCH and DELETE
 spring.mvc.hiddenmethod.filter.enabled=true
